updates for popup

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
   <link rel="stylesheet" href="/Frontend/src/css/style.css">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-_js-Nzshl0g5JzP7IYEQN7kBO-sC7Fk&callback=initMap"></script>
-
+  <script src="https://cdn.popupsmart.com/bundle.js" data-id="847178" async defer></script>
   <script>
     var global = global || window;
     var Buffer = Buffer || [];
