--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="assets/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/carouselstyle.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet"> 
   <script src="assets/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/3dedfcfb76.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
